<resources>
    <string name="en_lang" translatable="false">English</string>
    <string name="cs_lang" translatable="false">Czech</string>
    <string name="af_lang" translatable="false">Afrikaans</string>
    <string name="bg_lang" translatable="false">Bulgarian</string>
    <string name="nl_lang" translatable="false">Dutch</string>
    <string name="fr_lang" translatable="false">French</string>
    <string name="de_lang" translatable="false">German</string>
    <string name="el_lang" translatable="false">Greek</string>
    <string name="zh_lang" translatable="false">Chinese</string>
    <string name="it_lang" translatable="false">Italian</string>
    <string name="ko_lang" translatable="false">Korean</string>
    <string name="lt_lang" translatable="false">Lithuanian</string>
    <string name="pl_lang" translatable="false">Polish</string>
    <string name="pt_lang" translatable="false">Portuguese</string>
    <string name="pt_BR_lang" translatable="false">Portuguese, Brazilian</string>
    <string name="ro_lang" translatable="false">Romanian</string>
    <string name="ru_lang" translatable="false">Russian</string>
    <string name="sk_lang" translatable="false">Slovak</string>
    <string name="es_lang" translatable="false">Spanish</string>
    <string name="sv_lang" translatable="false">Swedish</string>
    <string name="tr_lang" translatable="false">Turkish</string>
    <string name="treatmentssafety_title">Treatments safety</string>
    <string name="treatmentssafety_maxbolus_title">Max allowed bolus [U]</string>
    <string name="treatmentssafety_maxcarbs_title">Max allowed carbs [g]</string>
    <string name="nav_preferences">Preferences</string>
    <string name="nav_refreshtreatments">Refresh treatments from NS</string>
    <string name="nav_resetdb">Reset Databases</string>
    <string name="reset_db_confirm">Do you really want to reset the databases?</string>
    <string name="nav_exit">Exit</string>
    <string name="danar_useextended_title">Use extended boluses for >200%%</string>
    <string name="danar_bt_name_title">DanaR Bluetooth device</string>
    <string name="ns_sync_use_absolute_title">Always use basal absolute values</string>
    <string name="alert_dialog_storage_permission_text">Please reboot your phone or restart AndroidAPS from the System Settings \notherwise Android APS will not have logging (important to track and verify that the algorithms are working correctly)!</string>
    <string name="alert_dialog_permission_battery_optimization_failed">This device does not appear to support battery optimization whitelisting - you may experience performance issues.</string>
    <string name="description_actions">Some buttons to quickly access common features</string>
    <string name="description_careportal">Enter advanced log book entries.</string>
    <string name="description_config_builder">Used for configuring the active plugins</string>
    <string name="description_objectives">Learning program</string>
    <string name="description_food">Displays the food presets defined in Nightscout</string>
    <string name="description_insulin_rapid">Insulin preset for Humalog and NovoRapid / NovoLog</string>
    <string name="description_insulin_ultra_rapid">Insulin preset for Fiasp</string>
    <string name="description_insulin_free_peak">Allows you to define the peak of the insulin activity and should only be used by advanced users</string>
    <string name="description_loop">Activate or deactivate the implementation triggering the loop.</string>
    <string name="description_ns_client">Synchronizes your data with Nightscout</string>
    <string name="description_ma">State of the algorithm in 2016</string>
    <string name="description_ama">State of the algorithm in 2017</string>
    <string name="description_smb">Most recent algorithm for advanced users</string>
    <string name="description_overview">Displays the current state of your loop and buttons for most common actions</string>
    <string name="description_persistent_notification">Shows an ongoing notification with a short overview of what your loop is doing</string>
    <string name="description_profile_local">Define a profile which is available offline.</string>
    <string name="description_profile_nightscout">Provides the profile you have defined in Nightscout</string>
    <string name="description_profile_simple">Define a profile with only one time block.</string>
    <string name="description_pump_combo">Pump integration for Accu-Chek Combo pumps, requires having ruffy installed</string>
    <string name="description_pump_dana_r">Pump integration for DANA Diabecare R pumps</string>
    <string name="description_pump_dana_r_korean">Pump integration for domestic DANA Diabecare R pumps</string>
    <string name="description_pump_dana_r_v2">Pump integration for DANA Diabecare R pumps with upgraded firmware</string>
    <string name="description_pump_dana_rs">Pump integration for DANA Diabecare RS pumps</string>
    <string name="ns_upload_only">NS upload only (disabled sync)</string>
    <string name="ns_upload_only_summary">NS upload only. Not effective on SGV unless a local source like xDrip is selected. Not effective on Profiles while NS-Profiles is used.</string>
    <string name="advancedsettings_title">Advanced Settings</string>
    <string name="nsclientinternal_title">NSClient</string>
    <string name="nsclientinternal_url_title">Nightscout URL</string>
    <string name="nsclientinternal_url_dialogmessage">Enter Your Nightscout URL</string>
    <string name="nsclientinternal_secret_title">NS API secret</string>
    <string name="nsclientinternal_secret_dialogtitle">NS API secret</string>
    <string name="nsclientinternal_secret_dialogmessage">Enter NS API secret (min 12 chars)</string>
    <string name="key_nsclientinternal_url" translatable="false">nsclientinternal_url</string>
    <string name="key_nsclientinternal_api_secret" translatable="false">nsclientinternal_api_secret</string>
    <string name="ns_logappstartedevent">Log app start to NS</string>
    <string name="key_ns_logappstartedevent" translatable="false">ns_logappstartedevent</string>
    <string name="ns_noupload">No upload to NS</string>
    <string name="ns_noupload_summary">All data sent to NS are dropped. AAPS is connected to NS but no change in NS is done</string>
    <string name="key_ns_upload_only" translatable="false">ns_upload_only</string>
    <string name="key_ns_noupload" translatable="false">ns_noupload</string>
    <string name="ns_alarmoptions">Alarm options</string>
    <string name="key_nsalarm_urgent_high" translatable="false">nsalarm_urgent_high</string>
    <string name="key_nsalarm_high" translatable="false">nsalarm_high</string>
    <string name="key_nsalarm_low" translatable="false">nsalarm_low</string>
    <string name="key_nsalarm_urgent_low" translatable="false">nsalarm_urgent_low</string>
    <string name="key_nsalarm_staledata" translatable="false">nsalarm_staledata</string>
    <string name="key_nsalarm_urgent_staledata" translatable="false">nsalarm_urgent_staledata</string>
    <string name="key_nsalarm_staledatavalue" translatable="false">nsalarm_staledatavalue</string>
    <string name="key_nsalarm_urgent_staledatavalue" translatable="false">nsalarm_urgent_staledatavalue</string>
    <string name="nsalarm_urgenthigh">Urgent high</string>
    <string name="nsalarm_high">High</string>
    <string name="nsalarm_low">Low</string>
    <string name="nsalarm_urgentlow">Urgent low</string>
    <string name="nsalarm_staledata">Stale data</string>
    <string name="nsalarm_urgentstaledata">Urgent stale data</string>
    <string name="nsalarm_staledatavalue_label">Stale data threshold [min]</string>
    <string name="nsalarm_urgent_staledatavalue_label">Urgent stale data threshold [min]</string>
    <string name="key_nsclient_localbroadcasts" translatable="false">nsclient_localbroadcasts</string>
    <string name="ns_localbroadcasts">Enable broadcasts to other apps (like xDrip). Do not enable if you have more than one instance of AAPS or NSClient installed!</string>
    <string name="ns_localbroadcasts_title">Enable local Broadcasts.</string>
    <string name="key_ns_create_announcements_from_errors" translatable="false">ns_create_announcements_from_errors</string>
    <string name="ns_create_announcements_from_errors_title">Create announcements from errors</string>
    <string name="ns_create_announcements_from_errors_summary">Create Nightscout announcement for error dialogs and local alerts (also viewable in Careportal under Treatments)</string>
    <string name="ns_autobackfill_summary">Autobackfill missig BGs from NS</string>
    <string name="key_ns_autobackfill" translatable="false">ns_autobackfill</string>
    <string name="key_ns_wifionly" translatable="false">ns_wifionly</string>
    <string name="key_ns_wifi_ssids" translatable="false">ns_wifi_ssids</string>
    <string name="key_ns_allowroaming" translatable="false">ns_allowroaming</string>
    <string name="key_ns_chargingonly" translatable="false">ns_chargingonly</string>
    <string name="ns_wifionly">Use WiFi connection only</string>
    <string name="ns_wifi_ssids">WiFi SSID</string>
    <string name="ns_chargingonly">Only if charging</string>
    <string name="connectionsettings_title">Connection settings</string>
    <string name="ns_wifi_allowedssids">Allowed SSIDs (semicolon separated)</string>
    <string name="ns_allowroaming">Allow connection in roaming</string>
    <string name="ns_autobackfill_title">Autobackfill BG</string>
    <string name="key_ns_uploadlocalprofile" translatable="false">ns_uploadlocalprofile</string>
    <string name="ns_ploadlocalprofile">Upload local profile changes to NS</string>
    <string name="key_telegram_group_url">telegram_group_url</string>
    <string name="telegram_group_url_title">Telegram group URL</string>
    <string name="jcwextrasettings_title">JCW Extra Settings</string>
    <string name="key_send_telegrams_instead_of_sms">Telegram responses</string>
    <string name="send_telegram_instead_sms_tittle">Send Telegram responses instead of SMS</string>
    <string name="key_notify_by_telegram">Notify by Telegram</string>
    <string name="send_telegram_notifications_tittle">Send notifications to Telegram channel</string>
    <string name="key_require_insulin_password">Require password for insulin</string>
    <string name="require_password_on_insulin_tittle">Require password on insulin actions</string>
    <string name="key_password_cache_time">Password cache time</string>
    <string name="password_cache_tittle">Don\'t ask for password on next X minutes</string>
    <string name="send_telegram_notifications_summary">AndroidAPS enviará notificaciones a través del grupo de Telegram, informando sobre las basales temporales a establecer, los cambios de perfil, etc.</string>
    <string name="send_telegram_instead_sms_summary">Cuando esté activado, las respuestas a los comandos SMS se enviarán a través del grupo de Telegram, en lugar de utilizar mensajes SMS.</string>
    <string name="telegram_group_url_summary">URL del bot Telegram que permite enviar mensajes a un canal público Telegram. La URL tendrá este formato: https://api.telegram.org/botxxxxxx/sendMessage?chat_id=@[chat_name]</string>
    <string name="require_password_on_insulin_summary">Solicitar password en las distintas opciones de AAPS que implican cambio en la infusión de insulina. Por ejemplo bolos, cambios de perfil, basal temporal manual, etc. Se utiliza la misma password que esté habilitada para modificar la configuración.</string>
    <string name="password_cache_summary">Si está activado el uso de contraseña, se puede establecer un número de minutos durante los cuales no se volverá a pedir la contraseña. Pasado ese tiempo, se requerirá de nuevo la contraseña cuando sea necesaria.</string>
</resources>