<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:validate="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/nsclientinternal_title">

        <com.andreabaccega.widget.ValidatingEditTextPreference
            android:defaultValue="https://{YOUR-SITE}.herokuapp.com/"
            android:dialogMessage="@string/nsclientinternal_url_dialogmessage"
            android:inputType="textUri"
            android:key="@string/key_nsclientinternal_url"
            android:selectAllOnFocus="true"
            android:title="@string/nsclientinternal_url_title"
            validate:testType="webUrl" />

        <EditTextPreference
            android:dialogMessage="@string/nsclientinternal_secret_dialogmessage"
            android:dialogTitle="@string/nsclientinternal_secret_dialogtitle"
            android:inputType="textPassword"
            android:key="@string/key_nsclientinternal_api_secret"
            android:title="@string/nsclientinternal_secret_title" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_ns_logappstartedevent"
            android:title="@string/ns_logappstartedevent" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_ns_uploadlocalprofile"
            android:title="@string/ns_ploadlocalprofile" />

        <PreferenceScreen android:title="@string/ns_alarmoptions">

            <SwitchPreference
                android:defaultValue="false"
                android:key="@string/key_nsalarm_urgent_high"
                android:title="@string/nsalarm_urgenthigh" />

            <SwitchPreference
                android:defaultValue="false"
                android:key="@string/key_nsalarm_high"
                android:title="@string/nsalarm_high" />

            <SwitchPreference
                android:defaultValue="false"
                android:key="@string/key_nsalarm_low"
                android:title="@string/nsalarm_low" />

            <SwitchPreference
                android:defaultValue="false"
                android:key="@string/key_nsalarm_urgent_low"
                android:title="@string/nsalarm_urgentlow" />

            <SwitchPreference
                android:defaultValue="false"
                android:key="@string/key_nsalarm_staledata"
                android:title="@string/nsalarm_staledata" />

            <com.andreabaccega.widget.ValidatingEditTextPreference
                android:defaultValue="16"
                android:digits="0123456789"
                android:inputType="number"
                android:key="@string/key_nsalarm_staledatavalue"
                android:maxLines="20"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:title="@string/nsalarm_staledatavalue_label"
                validate:maxNumber="120"
                validate:minNumber="15"
                validate:testType="numericRange" />

            <SwitchPreference
                android:defaultValue="false"
                android:key="@string/key_nsalarm_urgent_staledata"
                android:title="@string/nsalarm_urgentstaledata" />

            <com.andreabaccega.widget.ValidatingEditTextPreference
                android:defaultValue="31"
                android:digits="0123456789"
                android:inputType="number"
                android:key="@string/key_nsalarm_urgent_staledatavalue"
                android:maxLines="20"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:title="@string/nsalarm_urgent_staledatavalue_label"
                validate:maxNumber="180"
                validate:minNumber="30"
                validate:testType="numericRange" />

        </PreferenceScreen>

        <PreferenceScreen android:title="@string/connectionsettings_title">

            <SwitchPreference
                android:defaultValue="false"
                android:key="@string/key_ns_wifionly"
                android:disableDependentsState="true"
                android:title="@string/ns_wifionly" />

            <EditTextPreference
                android:dialogMessage="@string/ns_wifi_allowedssids"
                android:inputType="text"
                android:key="@string/key_ns_wifi_ssids"
                android:title="@string/ns_wifi_ssids" />

            <SwitchPreference
                android:defaultValue="true"
                android:dependency="@string/key_ns_wifionly"
                android:key="@string/key_ns_allowroaming"
                android:title="@string/ns_allowroaming" />

            <SwitchPreference
                android:defaultValue="false"
                android:key="@string/key_ns_chargingonly"
                android:title="@string/ns_chargingonly" />

        </PreferenceScreen>

       <PreferenceScreen android:title="@string/advancedsettings_title">

            <SwitchPreference
                android:defaultValue="true"
                android:key="@string/key_ns_autobackfill"
                android:title="@string/ns_autobackfill_title"
                android:summary="@string/ns_autobackfill_summary" />

            <SwitchPreference
                android:defaultValue="true"
                android:key="@string/key_ns_create_announcements_from_errors"
                android:summary="@string/ns_create_announcements_from_errors_summary"
                android:title="@string/ns_create_announcements_from_errors_title" />

            <SwitchPreference
                android:defaultValue="false"
                android:key="@string/key_nsclient_localbroadcasts"
                android:summary="@string/ns_localbroadcasts"
                android:title="@string/ns_localbroadcasts_title" />

            <SwitchPreference
                android:defaultValue="true"
                android:key="@string/key_ns_upload_only"
                android:summary="@string/ns_upload_only_summary"
                android:title="@string/ns_upload_only" />

            <SwitchPreference
                android:defaultValue="false"
                android:key="@string/key_ns_noupload"
                android:summary="@string/ns_noupload_summary"
                android:title="@string/ns_noupload" />

            <SwitchPreference
                android:defaultValue="false"
                android:key="ns_sync_use_absolute"
                android:title="@string/ns_sync_use_absolute_title" />

        </PreferenceScreen>

        <PreferenceScreen android:title="@string/jcwextrasettings_title">

            <com.andreabaccega.widget.ValidatingEditTextPreference
                android:defaultValue="https://api.telegram.org/botxxxxxx/sendMessage?chat_id=@[chat_name]"
                android:dialogMessage="@string/telegram_group_url_summary"
                android:inputType="textUri"
                android:key="@string/key_telegram_group_url"
                android:selectAllOnFocus="true"
                android:title="@string/telegram_group_url_title"
                android:summary="@string/telegram_group_url_summary"
                validate:testType="webUrl" />

            <SwitchPreference
                android:defaultValue="false"
                android:key="@string/key_notify_by_telegram"
                android:summary="@string/send_telegram_notifications_summary"
                android:title="@string/send_telegram_notifications_tittle" />

            <SwitchPreference
                android:defaultValue="false"
                android:key="@string/key_send_telegrams_instead_of_sms"
                android:summary="@string/send_telegram_instead_sms_summary"
                android:title="@string/send_telegram_instead_sms_tittle" />

            <SwitchPreference
                android:defaultValue="false"
                android:key="@string/key_require_insulin_password"
                android:summary="@string/require_password_on_insulin_summary"
                android:title="@string/require_password_on_insulin_tittle" />

            <com.andreabaccega.widget.ValidatingEditTextPreference
                android:defaultValue="0"
                android:digits="0123456789"
                android:inputType="number"
                android:key="@string/key_password_cache_time"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:title="@string/password_cache_tittle"
                android:summary="@string/password_cache_summary"
                android:dialogMessage="@string/password_cache_summary"
                validate:maxNumber="60"
                validate:minNumber="0"
                validate:testType="numericRange" />


        </PreferenceScreen>

    </PreferenceCategory>

</PreferenceScreen>